fix: .hide-nav height 0 and overflow hidden

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -25,6 +25,8 @@
 }
 
 .hide-nav {
-  transform: translateY(-120% )!important;
-  -webkit-transform: translateY(-120%) !important;
+  height: 0px;
+  overflow: hidden;
+  /* transform: translateY(-120% )!important;
+  -webkit-transform: translateY(-120%) !important; */
 }
